--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -323,6 +323,9 @@
     <string name="link_account">Link account</string>
     <string name="bank_account_connection_lost">We lost connection with your bank account. Resolve now.</string>
 
+    <string name="privacy_policy_url">https://www.cashli.io/privacy-policy-english</string>
+    <string name="terms_and_conditions_url">https://www.cashli.io/terms-of-use-english</string>
+
     <!--Plurals-->
     <plurals name="past_days_plural">
         <item quantity="zero">today</item>
